Design and basic changes

--- a/EduPage.html
+++ b/EduPage.html
@@ -2,54 +2,61 @@
 <html lang="en">
     <head>
         <link href="EduStyle.css" rel="stylesheet"/>
+        <link rel="icon" href="images/logo.png" />
         <meta charset="utl-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title> Education Details </title>
     </head>
     <body>
-      <header>
-        <nav>
-            <a class="cat" href="ExpPage.html">Experience</a>
-            <a class="cat" href="ProPage.html">Projects</a>
-            <a class="cat" href="EduPage.html">Education</a>
-            <a class="cat" href="SkillsPage.html">Skills</a>
-            <a class="cat" href="HobPage.html">Hobbies</a>
-            <a class="cat" href="AchPage.html">Achievements</a>
-        </nav>
-      </header>
-      <main>
-       <div class="info">
-        <h1 class="tit">EDUCATION</h1>
-        <hr>
-            <h3><u class="edulevel">BTech- Computer Science and Engineering</u></h3>
-            <b>St Mary's Engineering College 2019-2023 <br>Affiliated to Jawaharlal Nehru Technological University-Hyderabad </b>
-            <p>-Academic Excellence in Information Science, English and Mathematics.<br>
-                -Good Performance in social and cultural activities and held leadership roles.<br>
-                -Recognized for exceptional presentation skills.<br>
-                -Finished academically required mini and major projects.
-            </p>
-            <h3><u class="edulevel">Intermediate (12th)</u></h3>
-            <b><i>Sri Gayatri Junior College 2017-2019 </i></b>
-            <p>-Gained extensive training and accomplished all courses.<br>
-                -Passed out with 88.3%. 
-            </p>
-            <h3><u class="edulevel">Secondary Schooling Certificate(10th)</u></h3>
-            <b><i>SAV High School 2017</i></b>
-            <p>-Finished basic schooling and further skills improvement.<br>
-                -Passed out with a 9.3 GPA 
-            </p>
-        <hr>
-        <div class="cert">
-        <h2><i><u>Certification Courses:</u></i></h2>
-        <ul>    <li><b>Video Game Development:</b></li>
-                    <p>-From XAMK Open University (IVGC) –<i>Finland</i><br>
-                       -August 2021 to July 2022<br>
-                       -Learnt Unity3D, Krita, Blender
-                    </p>
-        </ul>
-        </div>
-        <button type="button"><a href="Edu2Page.html" target="_blank">CLICK HERE FOR FULL SCREEN</a></button>
-       </div>
-      </main>
+        <header>
+            <nav>
+                <a class="cat" href="ExpPage.html">Experience</a>
+                <a class="cat" href="ProPage.html">Projects</a>
+                <a class="cat" href="EduPage.html">Education</a>
+                <a class="cat" href="SkillsPage.html">Skills</a>
+                <a class="cat" href="HobPage.html">Hobbies</a>
+                <a class="cat" href="AchPage.html">Achievements</a>
+            </nav>
+        </header>
+        <main>
+            <div class="info">
+                <h1 class="tit">EDUCATION</h1>
+                <hr>
+                <h3><u class="edulevel">BTech- Computer Science and Engineering</u></h3>
+                <b><i>St Mary's Engineering College 2019-2023 <br>Affiliated to Jawaharlal Nehru Technological University-Hyderabad </i> </b>
+                    <ul>
+                        <li>Academic Excellence in Information Science, English and Mathematics.</li><br>
+                        <li>Good Performance in social and cultural activities and held leadership roles.</li><br>
+                        <li>Recognized for exceptional presentation skills.</li><br>
+                        <li>Finished academically required mini and major projects.</li>
+                    </ul>
+                    
+                <h3><u class="edulevel">Intermediate (12th)</u></h3>
+                <b><i>Sri Gayatri Junior College 2017-2019 </i></b>
+                    <ul>
+                        <li>Gained extensive training and accomplished all courses.</li><br>
+                        <li>Passed out with 88.3%.</li><br>
+                    </ul>
+                <h3><u class="edulevel">Secondary Schooling Certificate(10th)</u></h3>
+                <b><i>SAV High School 2017</i></b>
+                    <ul>
+                        <li>Finished basic schooling and further skills improvement.</li><br>
+                        <li>Passed out with 9.3 GPA.</li><br>
+                    </ul>
+                <hr>
+                <div class="cert">
+                <h2><i><u>Certification Courses:</u></i></h2>
+                <ul>    
+                    <li><b>Video Game Development:</b></li><br>
+                        <ul>
+                            <li>From XAMK Open University (IVGC) –<i>Finland</i></li><br>
+                            <li>August 2021 to July 2022</li><br>
+                            <li>Learnt Unity3D, Krita, Blender</li>
+                        </ul>
+                </ul>
+                </div>
+                <button type="button"><a href="Edu2Page.html" target="_blank">CLICK HERE FOR FULL SCREEN</a></button>
+            </div>
+        </main>
     </body>
 </html>
