--- a/ExpPage.html
+++ b/ExpPage.html
@@ -5,42 +5,50 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title> Experiences page </title>
       <link href="ExpStyle.css" rel="stylesheet" />
+      <link rel="icon" href="images/logo.png" />
   </head>
   <body>
-      <header>
-        <nav>
-            <a class="cat" href="ExpPage.html">Experience</a>
-            <a class="cat" href="ProPage.html">Projects</a>
-            <a class="cat" href="EduPage.html">Education</a>
-            <a class="cat" href="SkillsPage.html">Skills</a>
-            <a class="cat" href="HobPage.html">Hobbies</a>
-            <a class="cat" href="AchPage.html">Achievements</a>
-        </nav>
-      </header>
+    <header>
+      <nav>
+        <a class="cat" href="ExpPage.html">Experience</a>
+        <a class="cat" href="ProPage.html">Projects</a>
+        <a class="cat" href="EduPage.html">Education</a>
+        <a class="cat" href="SkillsPage.html">Skills</a>
+        <a class="cat" href="HobPage.html">Hobbies</a>
+        <a class="cat" href="AchPage.html">Achievements</a>
+      </nav>
+    </header>
       <main>
         <div class="info">
         <h1 class="exp"><span>EXPERIENCE<small>(Technical)</small>: <i>Fresher</i></span></h1><br><br>
         <h3><i><u>Backend Developer Intern</u></i></h3>
          <p><span><b>MATDUN Labs India Pvt Ltd. | Feb 2023 -  (Present) </b></span></p>
-            <p> - I contributed to vital backend features, developed APIs, and optimized database performance.</p> 
-            <p> - I collaborated with a skilled team, honing my skills in NodeJS, Django, Flask, PostgreSQL, Postman, Docker and so on.</p> 
-            <p> - This experience provided insights into Agile practices, teamwork, and the impact of my work on the final product, 
-              fueling my passion for software development in a dynamic startup environment.</p>
+         <ul>
+            <li>I contributed to vital backend features, developed APIs, and optimized database performance.</li><br>
+            <li>I collaborated with a skilled team, honing my skills in NodeJS, Django, Flask, PostgreSQL, Postman, Docker and so on.</li><br>
+            <li>This experience provided insights into Agile practices, teamwork, and the impact of my work on the final product, 
+              fueling my passion for software development in a dynamic startup environment.</li>
+          </ul>
         <hr>
         <h1 class="exp"><span>EXPERIENCE<small>(Volunteering)</small>:</span></h1>
         <h3><i><u>Teaching Intern</u></i></h3>
          <p><span><b>Boddhi Tree Foundation (NGO) | Nov 2021 - Mar 2022</b></span></p>
-            <p> - I have learnt a lot about how to be a good teacher. 
+            <ul>
+              <li>I have learnt a lot about how to be a good teacher. 
                 My co-interns have taught me how to work in a group 
-                environment and handle stress.</p>
-            <p> - Teaching children of under privileged background helped me feel at peace and satisfied.
-                I felt at peace as I was doing a selfless deed.</p>
+                environment and handle stress.</li><br>
+              <li>Teaching children of under privileged background helped me feel at peace and satisfied.
+                I felt peaceful as I was doing a selfless deed.</li>
+            </ul>
         <h3><i><u>Graphic Design Intern</u></i></h3>
          <p><span><b>CollegeTips.in | Mar 2022 - Apr 2022</b></span></p>
-            <p>- I have learnt how to deal with stress and meet deadlines.</p>
-            <p>- The work given was not hard but it was time consuming. 
-                I did my best to give the quality output in the limited time.</p>
-            <P> - This internship has taught me that work can be fun too.</P>
+         <ul>
+            <li>I have learnt how to deal with stress and meet deadlines.</li><br>
+            <li>The work given was not hard but it was time consuming. 
+                I did my best to give the quality output in the limited time.</li><br>
+            <li>This internship has taught me that work can be fun too.</li>
+         </ul>
+            
             <br><br>
             <button type="button"><a href="Exp2Page.html" target="_blank">CLICK HERE FOR FULL SCREEN</a></button>
             <br><br><br>
