--- a/Pro2Page.html
+++ b/Pro2Page.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0 " />
         <title>Projects Page</title>
         <link href="ProjStyle.css" rel="stylesheet" />
+        <link rel="icon" href="images/logo.png" />
     </head>
     <body>
       <header>
@@ -19,20 +20,37 @@
       </header>
       <main>
         <h1 align="center"><span>Projects</span></h1>
-        <h2><span>Heart Disease Prediction using Machine Learning <small>(Academic Mini-Project 2022)</small></span></h2>
-        <p><span>
-            -Helps the user to predict if he/she has a heart related disease.<br>
-            -Uses Machine Learning Algorithms to refer the dataset and points out the chances of a heart disease.<br>
-        </span></p>
-        <hr>
-        <h2><span>Budget App <small>(Personal Project-2022)</small></span></h2>
-            <p><span>
-                -Helps the user to know about his income and expenses.<br>
-                -Keeps track of unwanted leaks from his pocket.<br>
-                -Gives suggestions on how to save money, where to avoide wasting and
-                how else to save best.
-            </span></p>
-            <br>
+            <h2><span>Facial Expression recognition system <small>(Academic Major-Project 2023)</small></span></h2>
+                <ul>
+                    <li><b>Languages :</b> Python</li><br>
+                    <li><b>Team size :</b> 4</li><br>
+                    <li><b>Role :</b> Team-Leader</li><br>
+                    <li><b>Description :</b>  This is a computer vision project. It is mostly based on CNN and RNN models and has the accuracy of 
+                        96%. The application recognises the emotion exhibited on the face based on CNN model using YOLO V2 and OpenCV. 
+                        Thereafter, the calculation of the probability of the expression is done based on RNN model.</li><br>
+                </ul>
+                <p><b>DEMO VIDEO : </b></p>
+            <hr>
+            <h2><span>Heart Disease Prediction using Machine Learning <small>(Academic Mini-Project 2022)</small></span></h2>
+                <ul>
+                    <li><b>Languages :</b> Python</li><br>
+                    <li><b>Team size :</b> 4</li><br>
+                    <li><b>Framework :</b> Django</li><br>
+                    <li><b>Role :</b> Team-Leader</li><br>
+                    <li><b>Description :</b> The project deals with the health information of the user and predicts whether he/she has heart disease. Using 
+                        algorithms like KNN, Decision Tree, SVM, Linear Regression, the accuracy rate of the prediction is 80%. This application 
+                        reduces the efforts of the user and saves money by acting as a substitute for expensive machinery. </li><br>
+                </ul>
+                <p><b>DEMO VIDEO : </b></p>
+            <hr>
+            <!-- <h2><span>Budget App <small>(Personal Project-2022)</small></span></h2>
+                <p><span>
+                    -Helps the user to know about his income and expenses.<br>
+                    -Keeps track of unwanted leaks from his pocket.<br>
+                    -Gives suggestions on how to save money, where to avoide wasting and
+                    how else to save best.
+                </span></p> -->
+                <br>
             <br><br>
             <br><br>
             <br><br>
