--- a/AchPage.html
+++ b/AchPage.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title> Achievements Page</title>
         <link href="AchStyle.css" rel="stylesheet" />
+        <link rel="icon" href="images/logo.png" />
     </head>
     <body>
       <header>
