--- a/Embeded.html
+++ b/Embeded.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title> Embeded</title>
         <link href="EmbededStyle.css" rel="stylesheet" />
+        <link rel="icon" href="images/logo.png" />
     </head>
     <body>
       <header>
