--- a/Exp2Page.html
+++ b/Exp2Page.html
@@ -5,6 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title> Experiences page </title>
       <link href="ExpStyle.css" rel="stylesheet" />
+      <link rel="icon" href="images/logo.png" />
   </head>
   <body>
       <header>
