--- a/Hob2Page.html
+++ b/Hob2Page.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Hobbies Page</title>
         <link href="HobStyle.css" rel="stylesheet" />
+        <link rel="icon" href="images/logo.png" />
     </head>
     <body>
       <header>
