--- a/Home.html
+++ b/Home.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8"/>
         <title>Gopala Krishna D | Personal Website </title>
         <link rel="stylesheet" href="Homestyle.css" />
+        <link rel="icon" href="images/logo.png" />
     </head>
     <body oncontextmenu="return false;">
         <header>        
@@ -49,6 +50,7 @@
                 </p>
             </div>
             </hr>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfSScGDOZqkcFVOA-tlFQe3sH2YjxETmFOuiAmQljWuGJK8hA/viewform?embedded=true" width="640" height="686" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             <h3 align="center"><span>Contact me.</span></h3>
             <p id=contact"" align="center">
                 <a href="https://www.linkedin.com/in/gopala-krishna-d/" target="_blank" placeholder="LINKEDIN=@gopala-krishna-d">
