--- a/SkillsPage.html
+++ b/SkillsPage.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Skills Page</title>
         <link href="SkillStyle.css" rel="stylesheet"/>
+        <link rel="icon" href="images/logo.png" />
     </head>
     <body>
       <header>
