Background picture and other home page changes

--- a/Home.html
+++ b/Home.html
@@ -29,41 +29,53 @@
         </header>
         <main>
         <hr>
-            <p id="about" class="about"><b>About me:</b><br><br>
-                <i>I am a BTech student 
-                in the Computer Science field. My main focus is to serve as a good 
-                asset to a reputed company. I am flexible, and reliable and possess 
-                excellent time-keeping skills. I am an enthusiastic, self-motivated 
-                and hardworking person. I work well in a team environment and I also 
-                use my initiative whenever required.<br>
-                I am a passionate person who pursues his dreams, works hard and is 
-                results-oriented.I constantly work on improving myself to achieve the 
-                best version.</i>
+            <p id="about" class="about"><i>Hey there,</i><br><br>
+                <i>Welcome to my corner of the digital universe! <br><br>
+                    I'm thrilled you've dropped by for a visit. I've poured countless cups of virtual coffee into crafting this little haven.<br>
+                    I really hope you like it.<br><br>
+                    Now, I won't be waving a flag of bragging rights here, but hey, I did manage to snag a bachelor's degree in the mystical arts of Computer Science and Engineering (BTech). You know, the modern-day wizardry stuff.<br>
+                    In between sips of inspiration, I've conjured up a bunch of personal and academic projects. They're all hanging out in the projects section.<br>
+                    Oh, and if you're curious about my current adventures, I've infiltrated the ranks of a startup called MATDUN AI. I answer to the title of "INTERN Python Back-End Sorcerer(Developer)." My spells? Well, they involve coding and a sprinkle of fairy dust (or just a lot of caffeine).<br>
+                    But wait, there's more! I'm not just a code-wielding magician. I'm on a passionate quest to absorb knowledge like a sponge on steroids. Learning new things and then bravely trying to fit them into my brain is kind of my jam.<br><br>
+                    Now, I could keep rambling on like a caffeinated parrot, but I sense you might be craving a break.</i> 😂<br><br>
+                    <i> So, I'll zip it and let you embark on your epic journey through this page. Oh, and before you go gallivanting off, feel free to drop a comment. I'm all ears— well, metaphorically speaking. You can even whisper your thoughts anonymously by skipping your name.<br>
+                    Happy exploring, you intrepid adventurer!</i> 🚀🔮  
+                😉
             </p>
         <hr>
-            <p id="iframe" class="inside">
+            <p class="inside">
                 <b>Select from below to know more</b>
             </p>
             <div>
                 <p align="center">
-                <iframe  width="800" height="700" src="Embeded.html" alt="A box showing different pages"></iframe>
+                <iframe id="embedded"  width="800" height="700" src="Embeded.html" alt="A box showing different pages"></iframe>
                 </p>
+            </div><br><br>
+
+            <h2 align="center"><span>Contact me.</span></h2>
+            <div align="center">
+                <p id="contact">
+                    <a href="https://www.linkedin.com/in/gopala-krishna-d/" target="_blank" placeholder="LINKEDIN=@gopala-krishna-d">
+                        <img id="contact" src="images/linkedin.png">
+                    </a>&nbsp;&nbsp;
+                    <a href="https://instagram.com/iam._.gk?utm_source=qr&igshid=ZDc4ODBmNjlmNQ%3D%3D" target="_blank" placeholder="LINKEDIN=@gopala-krishna-d">
+                        <img id="contact" src="images/insta.png">
+                    </a>&nbsp;&nbsp;
+                    <a href="https://twitter.com/g0pa1kr1shna" target="_blank" placeholder="TWITTER=@g0palakr1shna">
+                        <img id="contact" src="images/twitter.png">
+                    </a>&nbsp;&nbsp;
+                    <a href="https://github.com/gopalakrishna1d" target="_blank" placeholder="GitHub">
+                        <img id="contact" src="images/git.png">
+                    </a>
+                </p><br><br>
             </div>
-            </hr>
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfSScGDOZqkcFVOA-tlFQe3sH2YjxETmFOuiAmQljWuGJK8hA/viewform?embedded=true" width="640" height="686" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-            <h3 align="center"><span>Contact me.</span></h3>
-            <p id=contact"" align="center">
-                <a href="https://www.linkedin.com/in/gopala-krishna-d/" target="_blank" placeholder="LINKEDIN=@gopala-krishna-d">
-                    <img id="contact" src="https://www.freeiconspng.com/thumbs/linkedin-logo-png/displaying-19-gallery-images-for-linkedin-logo-png-25.png">
-                </a>
-                <a href="https://twitter.com/g0pa1kr1shna" target="_blank" placeholder="TWITTER=@g0palakr1shna">
-                    <img id="contact" src="https://s22.q4cdn.com/529358580/files/design/icons/twitter.png">
-                </a>
-                <a href="https://github.com/gopalakrishna1d" target="_blank" placeholder="GitHub">
-                    <img id="contact" src="https://logodix.com/logo/64439.png">
-                </a>
-            </p>
-            <br>
+            <p align="center"><b>-Leave a Comment</b></p>
+            <div align="center" class="cont">
+                <div class="iframe-container">
+                    <iframe id="contact_form" scrolling="no" src="https://docs.google.com/forms/d/e/1FAIpQLSfSScGDOZqkcFVOA-tlFQe3sH2YjxETmFOuiAmQljWuGJK8hA/viewform?embedded=true" >Loading…</iframe>
+                </div>
+                <h1 id="end">Visit again.</h1>
+            </div>
         </main>
     </body>
 </html>
