Full screen button update

--- a/Ach2Page.html
+++ b/Ach2Page.html
@@ -42,7 +42,7 @@
             <br><br>
             <br><br>
             <br>
-        <button type="button"><a href="Home.html">CLICK HERE FOR HOME PAGE</button>
+        <button type="button"><a href="Home.html">HOME PAGE</button>
           <br><br>
           <br><br>
           <br><br>
