--- a/Edu2Page.html
+++ b/Edu2Page.html
@@ -55,7 +55,7 @@
                     </ul>
             </ul>
             </div>
-        <button type="button"><a href="Home.html">CLICK HERE FOR HOME PAGE</a></button>
+        <button type="button"><a href="Home.html">HOME PAGE</a></button>
        </div>
       </main>
     </body>
