--- a/AchPage.html
+++ b/AchPage.html
@@ -42,7 +42,7 @@
             <br><br>
             <br><br>
             <br>
-        <button type="button"><a href="Ach2Page.html" target="_blank">CLICK HERE FOR FULL SCREEN</a></button>
+        <button type="button"><a href="Ach2Page.html" target="_blank">FULL SCREEN</a></button>
         <br><br>
         <br><br>
         <br><br>
