--- a/ExpPage.html
+++ b/ExpPage.html
@@ -50,7 +50,7 @@
          </ul>
             
             <br><br>
-            <button type="button"><a href="Exp2Page.html" target="_blank">CLICK HERE FOR FULL SCREEN</a></button>
+            <button type="button"><a href="Exp2Page.html" target="_blank">FULL SCREEN</a></button>
             <br><br><br>
             <br><br>
             <br><br>
