--- a/HobPage.html
+++ b/HobPage.html
@@ -33,7 +33,7 @@
             <br><br>
             <br><br>
             <br><br>
-        <button type="button"><a href="Hob2Page.html" target="_blank">CLICK HERE FOR FULL SCREEN</a></button>
+        <button type="button"><a href="Hob2Page.html" target="_blank">FULL SCREEN</a></button>
         <br> <br><br>
         <br><br>
     </main>
