--- a/ProPage.html
+++ b/ProPage.html
@@ -55,7 +55,7 @@
                 <br><br>
                 <br><br>
                 <br><br>
-                <button type="button"><a href="Pro2Page.html" target="_blank">CLICK HERE FOR FULL SCREEN</a></button>
+                <button type="button"><a href="Pro2Page.html" target="_blank">FULL SCREEN</a></button>
                 <br>
                 <br><br>
                 <br><br>
