--- a/SkillsPage.html
+++ b/SkillsPage.html
@@ -55,7 +55,7 @@
             <br><br>
             <br><br>
             <br>
-      <button type="button"><a href="Skills2Page.html" target="_blank">CLICK HERE FOR FULL SCREEN</a></button>
+      <button type="button"><a href="Skills2Page.html" target="_blank">FULL SCREEN</a></button>
         </main>
       </main>
     </body>
