--- a/Home.html
+++ b/Home.html
@@ -47,7 +47,7 @@
             <p class="inside">
                 <b>Select from below to know more</b>
             </p>
-            <div>
+            <div id=iframe>
                 <p align="center">
                 <iframe id="embedded"  width="900" height="1000" src="Embeded.html" alt="A box showing different pages"></iframe>
                 </p>
