--- a/Exp2Page.html
+++ b/Exp2Page.html
@@ -20,15 +20,29 @@
       </header>
       <main>
         <div class="info">
-        <h2 class="exp"><span>EXPERIENCE<small>(Technical)</small>: <i>Fresher</i></span></h2><br><br>
+        <h2 class="exp"><span>EXPERIENCE<small>(Technical)</small>: 
+        <i>Fresher</i></span></h2><br><br>
+        <h3><i><u>Junior Backend Developer</u></i></h3>
+        <p><span><b>MATDUN Labs India Pvt Ltd. | Nov 2023 -  (Present) </b></span></p>
+            <p> - My contributions are vital for most of the backend features, developed APIs, and optimized database performance.</p> 
+            <p> - I polished my skills in Django Rest Framework, FastAPI, Flask, PostgreSQL, Postman, Docker, Kubernetes and so on.</p> 
+            <p> - This experience has showed me my caliber and pushed me to my limits. I have reached heights in learning many crutial development skills.</p>
+        <br>
         <h3><i><u>Backend Developer Intern</u></i></h3>
-         <p><span><b>MATDUN Labs India Pvt Ltd. | Feb 2023 -  (Present) </b></span></p>
-            <p> - I contributed to vital backend features, developed APIs, and optimized database performance.</p> 
-            <p> - I collaborated with a skilled team, honing my skills in NodeJS, Django, Flask, PostgreSQL, Postman, Docker and so on.</p> 
+         <p><span><b>MATDUN Labs India Pvt Ltd. | Feb 2023 - Nov 2023 </b></span></p>
+            <p> - I have contributed to vital backend features, developed APIs, and optimized database performance.</p> 
+            <p> - I also collaborated with a skilled team, honing my skills in NodeJS, Django, Flask, PostgreSQL, Postman, Docker and so on.</p> 
             <p> - This experience provided insights into Agile practices, teamwork, and the impact of my work on the final product, 
               fueling my passion for software development in a dynamic startup environment.</p>
-        <hr>
-        <h2 class="exp"><span>EXPERIENCE<small>(Volunteering)</small>:</span></h2>
+        <br><hr><br>
+        <h2 class="exp"><span>EXPERIENCE<small>(Volunteering)</small>:</span></h2><br><br>
+        <h3><i><u>Graphic Design Intern</u></i></h3>
+        <p><span><b>CollegeTips.in | Mar 2022 - Apr 2022</b></span></p>
+            <p>- I have learnt how to deal with stress and meet deadlines.</p>
+            <p>- The work given was not hard but it was time consuming. 
+                I did my best to give the quality output in the limited time.</p>
+            <P> - This internship has taught me that work can be fun too.</P>
+        <br>
         <h3><i><u>Teaching Intern</u></i></h3>
          <p><span><b>Boddhi Tree Foundation (NGO) | Nov 2021 - Mar 2022</b></span></p>
             <p> - I have learnt a lot about how to be a good teacher. 
@@ -36,12 +50,6 @@
                 environment and handle stress.</p>
             <p> - Teaching children of under privileged background helped me feel at peace and satisfied.
                 I felt at peace as I was doing a selfless deed.</p>
-        <h3><i><u>Graphic Design Intern</u></i></h3>
-         <p><span><b>CollegeTips.in | Mar 2022 - Apr 2022</b></span></p>
-            <p>- I have learnt how to deal with stress and meet deadlines.</p>
-            <p>- The work given was not hard but it was time consuming. 
-                I did my best to give the quality output in the limited time.</p>
-            <P> - This internship has taught me that work can be fun too.</P>
             <br><br><br><br><br>
             <br><br>
             <br><br>
