--- a/Home.html
+++ b/Home.html
@@ -36,7 +36,7 @@
                     I really hope you like it.<br><br>
                     Now, I won't be waving a flag of bragging rights here, but hey, I did manage to snag a bachelor's degree in the mystical arts of Computer Science and Engineering (BTech). You know, the modern-day wizardry stuff.<br>
                     In between sips of inspiration, I've conjured up a bunch of personal and academic projects. They're all hanging out in the projects section.<br>
-                    Oh, and if you're curious about my current adventures, I've infiltrated the ranks of a startup called MATDUN AI. I answer to the title of "INTERN Python Back-End Sorcerer(Developer)." My spells? Well, they involve coding and a sprinkle of fairy dust (or just a lot of caffeine).<br>
+                    Oh, and if you're curious about my current adventures, I've infiltrated the ranks of a startup called MATDUN AI. I answer to the title of "Junior Backend Sorcerer(Developer)." My spells? Well, they involve coding and a sprinkle of fairy dust (or just a lot of caffeine).<br>
                     But wait, there's more! I'm not just a code-wielding magician. I'm on a passionate quest to absorb knowledge like a sponge on steroids. Learning new things and then bravely trying to fit them into my brain is kind of my jam.<br><br>
                     Now, I could keep rambling on like a caffeinated parrot, but I sense you might be craving a break.</i> 😂<br><br>
                     <i> So, I'll zip it and let you embark on your epic journey through this page. Oh, and before you go gallivanting off, feel free to drop a comment. I'm all ears— well, metaphorically speaking. You can even whisper your thoughts anonymously by skipping your name.<br>
